GNOME Bugzilla – Bug 727784
libebook: Don’t emit a warning on a dropped D-Bus connection in dispose
Last modified: 2014-04-10 08:51:15 UTC
Created attachment 273750 [details] [review] libebook: Don’t emit a warning on a dropped D-Bus connection in dispose This occasionally and unavoidably happens in the libfolks unit tests, where libfolks drops its final EBookClientView reference and proceeds to kill the dbus-daemon. EBookClientView, however, keeps itself alive internally in order to send a dispose() method call to the address book server. This method call can return after the server has been killed, and will return a G_IO_ERROR_CLOSED error in such cases. Ignore them.
Thanks for that. Patch looks okay to me. ECalClientView has the same logic - would you mind fixing up that as well?
Created attachment 273960 [details] [review] libebook: Don’t emit a warning on a dropped D-Bus connection in dispose This occasionally and unavoidably happens in the libfolks unit tests, where libfolks drops its final EBookClientView reference and proceeds to kill the dbus-daemon. EBookClientView, however, keeps itself alive internally in order to send a dispose() method call to the address book server. This method call can return after the server has been killed, and will return a G_IO_ERROR_CLOSED error in such cases. Ignore them.
Created attachment 273961 [details] [review] libecal: Don’t emit a warning on a dropped D-Bus connection in dispose See commit e31aae9c123da33a5613fa77cba55668e356f9ce.
Merged to master, with a second commit for ECalClientView.
Comment on attachment 273960 [details] [review] libebook: Don’t emit a warning on a dropped D-Bus connection in dispose commit e31aae9c123da33a5613fa77cba55668e356f9ce Author: Philip Withnall <philip@tecnocode.co.uk> Date: Mon Apr 7 22:22:12 2014 +0100 libebook: Don’t emit a warning on a dropped D-Bus connection in dispose This occasionally and unavoidably happens in the libfolks unit tests, where libfolks drops its final EBookClientView reference and proceeds to kill the dbus-daemon. EBookClientView, however, keeps itself alive internally in order to send a dispose() method call to the address book server. This method call can return after the server has been killed, and will return a G_IO_ERROR_CLOSED error in such cases. Ignore them. https://bugzilla.gnome.org/show_bug.cgi?id=727784 addressbook/libebook/e-book-client-view.c | 10 ++++++++-- 1 file changed, 8 insertions(+), 2 deletions(-)
Comment on attachment 273961 [details] [review] libecal: Don’t emit a warning on a dropped D-Bus connection in dispose commit 964e77bc4356b7f0762f26b2972d5c9dc1ee613e Author: Philip Withnall <philip@tecnocode.co.uk> Date: Thu Apr 10 09:46:59 2014 +0100 libecal: Don’t emit a warning on a dropped D-Bus connection in dispose See commit e31aae9c123da33a5613fa77cba55668e356f9ce. https://bugzilla.gnome.org/show_bug.cgi?id=727784 calendar/libecal/e-cal-client-view.c | 10 ++++++++-- 1 file changed, 8 insertions(+), 2 deletions(-)