libecal: Don’t emit a warning on a dropped D-Bus connection in dispose

See commit e31aae9c123da33a5613fa77cba55668e356f9ce.

https://bugzilla.gnome.org/show_bug.cgi?id=727784